--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/tatchunari/webcrawlerhttp#readme",
   "devDependencies": {
     "jest": "^30.0.0"
+  },
+  "dependencies": {
+    "jsdom": "^26.1.0"
   }
 }
